--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                         </div>
                     </div>
                     <div class="foto">
-                        <img src="img/cons.png" alt="">
+                        <img src="img/bg-form.png" alt="">
                     </div>
                 </div>
             </section>
