--- a/services.html
+++ b/services.html
@@ -121,6 +121,7 @@
                             <div></div>
                             <p>Результат</p>
                         </div>
+                        <span class="big-num">1</span>
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
@@ -135,6 +136,7 @@
                             <div></div>
                             <p>Результат</p>
                         </div>
+                        <span class="big-num">2</span>
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
@@ -148,6 +150,7 @@
                         <div class="more-details">
                             <button class="btn">Подробнее</button>
                         </div>
+                        <span class="big-num">4</span>
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
@@ -161,6 +164,7 @@
                         <div class="more-details">
                             <button class="btn">Подробнее</button>
                         </div>
+                        <span class="big-num">3</span>
                     </div>
                 </div>
             </section>
