--- a/services.html
+++ b/services.html
@@ -38,23 +38,23 @@
                     CRM-системы жизненно необходимым.</p>
                 <div class="grid-card">
                     <div class="card card_hover">
-                        <img class="card__picture" src="img/img-6.png" alt="Картинка">
+                        <img class="card__picture" src="img/comp.png" alt="Картинка">
                         <h3 class="card__title">Нехватка информации о клиентах</h3>
                         <p class="card__text"></p>
                     </div>
                     <div class="card card_hover">
-                        <img class="card__picture" src="img/img-6.png" alt="Картинка">
+                        <img class="card__picture" src="img/dorabotka.png" alt="Картинка">
                         <h3 class="card__title">Разрозненные процессы
                         </h3>
                         <p class="card__text">Отсутствие единой платформы для управления продажами и маркетингом приводит к путанице и снижению эффективности работы команды. Это затрудняет совместную работу и обмен информацией.</p>
                     </div>
                     <div class="card card_hover">
-                        <img class="card__picture" src="img/img-6.png" alt="Картинка">
+                        <img class="card__picture" src="img/target.png" alt="Картинка">
                         <h3 class="card__title">Проблемы с удержанием клиентов</h3>
                         <p class="card__text"></p>
                     </div>
                     <div class="card card_hover">
-                        <img class="card__picture" src="img/img-6.png" alt="Картинка">
+                        <img class="card__picture" src="img/consultation.png" alt="Картинка">
                         <h3 class="card__title">Сложности в анализе результатов</h3>
                         <p class="card__text"></p>
                     </div>
@@ -78,7 +78,7 @@
                     <p class="wr-biz__bid">Оставьте заявку прямо сейчас, чтобы получить профессиональную помощь в выборе и настройке решения, которое идеально подойдет именно для вашего бизнеса. Наша команда готова уделять максимальное внимание вашим потребностям, предлагать
                         наиболее оптимальные решения.</p>
                     <div class="wr-biz__picture">
-                        <img src="img/rec.png">
+                        <img src="img/target.png">
                     </div>
                     <ul class=" wr-biz__list list">
                         <div class="list__item"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -111,11 +111,11 @@
                     <div class="number-st">
                         <div class="text-basic">
                             <h3 class="text-basic__title">Аудит и составление ТЗ</h3>
-                            <p class="text-basic__par">срок
-                                1-2 недели</p>
-                            <p class="text-basic__par">стоимость
-                                по тарифу </p>
-                            <p class="text-basic__par">Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
+                            <p>срок
+                                <span class="bold">1-2 недели</span></p>
+                            <p>стоимость
+                                <span class="bold">по тарифу</span></p>
+                            <p>Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
                         </div>
                         <div class="text-foto">
                             <div></div>
@@ -126,11 +126,10 @@
                     <div class="number-st">
                         <div class="text-basic">
                             <h3 class="text-basic__title">Внедрение CRM</h3>
-                            <p class="text-basic__par">срок
-                                1-7 месяцев</p>
-                            <p class="text-basic__par">стоимость
-                                от 2000 руб./час</p>
-                            <p class="text-basic__par">Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
+                            <p>срок
+                                <span class=" bold">1-7 месяцев</span></p>
+                            <p>стоимость <span class="bold">от 2000 руб./час</span></p>
+                            <p>Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
                         </div>
                         <div class="text-foto">
                             <div></div>
@@ -140,12 +139,12 @@
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
-                            <h3 class="text-basic__title">Сопровождение</h3>
+                            <h3 class="text-basic__title">Индивидуальная разработка</h3>
                             <p class="text-basic__par">срок
-                                ежемесячно</p>
+                                <span class="bold">от 1 недели</span></p>
                             <p class="text-basic__par">стоимость
-                                от 2000 руб./час</p>
-                            <p class="text-basic__par">Получите в распоряжение команду экспертов для ежемесячного развития и гарантии работоспособности CRM-системы</p>
+                                <span class="bold">от 2000 руб./час</span></p>
+                            <p class="text-basic__par">Если базового функционала недостаточно, мы разработаем уникальные модули, которые полностью соответствуют специфике вашего бизнеса</p>
                         </div>
                         <div class="more-details">
                             <button class="btn">Подробнее</button>
@@ -154,17 +153,35 @@
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
-                            <h3 class="text-basic__title">Индивидуальная разработка</h3>
+                            <h3 class="text-basic__title">Сопровождение</h3>
                             <p class="text-basic__par">срок
-                                от 1 недели</p>
+                                <span class="bold">ежемесячно</span></p>
                             <p class="text-basic__par">стоимость
-                                от 2000 руб./час</p>
-                            <p class="text-basic__par">Если базового функционала недостаточно, мы разработаем уникальные модули, которые полностью соответствуют специфике вашего бизнеса</p>
+                                <span class="bold">от 2000 руб./час</span></p>
+                            <p class="text-basic__par">Получите в распоряжение команду экспертов для ежемесячного развития и гарантии работоспособности CRM-системы</p>
                         </div>
                         <div class="more-details">
                             <button class="btn">Подробнее</button>
                         </div>
                         <span class="big-num">3</span>
+                    </div>
+                </div>
+            </section>
+            <section class="form-crm">
+                <div class="wr-form-crm container">
+                    <div class="inf">
+                        <h2>Запишись на бесплатный урок
+                            по работе в CRM</h2>
+                        <p class="inf__pr">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
+                        <div class="wr-form">
+                            <form class="form-bt">
+                                <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
+                                <input class="form-bt__button" type="submit" value="Оставить заявку">
+                            </form>
+                        </div>
+                    </div>
+                    <div class="foto">
+                        <img src="img/bg-form.png" alt="">
                     </div>
                 </div>
             </section>
