--- a/sites.html
+++ b/sites.html
@@ -33,35 +33,35 @@
     <main>
         <div class="container">
             <secyion class="necessity">
-                <h2 class="up-title"><span>Проблемы, которые не оставляют шансов</span><br> Когда CRM становится необходимостью</h2>
-                <p class="necessity__text">В современном бизнесе эффективное управление клиентскими отношениями играет ключевую роль в успехе компании. Однако, с ростом объема данных и увеличением числа клиентов, многие организации сталкиваются с проблемами, которые делают внедрение
-                    CRM-системы жизненно необходимым.</p>
+                <h2 class="up-title"><span>Мы предлагаем</span><br>своим клиентам услуги</h2>
+                <!--<p class="necessity__text">В современном бизнесе эффективное управление клиентскими отношениями играет ключевую роль в успехе компании. Однако, с ростом объема данных и увеличением числа клиентов, многие организации сталкиваются с проблемами, которые делают внедрение
+                    CRM-системы жизненно необходимым.</p>-->
                 <div class="grid-card">
                     <div class="card card_hover">
                         <img class="card__picture" src="img/comp.png" alt="Картинка">
-                        <h3 class="card__title">Нехватка информации о клиентах</h3>
+                        <h3 class="card__title">Cоздание сайтов</h3>
                         <p class="card__text"></p>
                     </div>
                     <div class="card card_hover">
                         <img class="card__picture" src="img/dorabotka.png" alt="Картинка">
-                        <h3 class="card__title">Разрозненные процессы
+                        <h3 class="card__title">Раскрутка и оптимизация уже готовых сайтов
                         </h3>
-                        <p class="card__text">Отсутствие единой платформы для управления продажами и маркетингом приводит к путанице и снижению эффективности работы команды. Это затрудняет совместную работу и обмен информацией.</p>
+                        <p class="card__text"></p>
                     </div>
                     <div class="card card_hover">
                         <img class="card__picture" src="img/target.png" alt="Картинка">
-                        <h3 class="card__title">Проблемы с удержанием клиентов</h3>
+                        <h3 class="card__title">Продвижение сайтов в соцсетях</h3>
                         <p class="card__text"></p>
                     </div>
                     <div class="card card_hover">
                         <img class="card__picture" src="img/consultation.png" alt="Картинка">
-                        <h3 class="card__title">Сложности в анализе результатов</h3>
+                        <h3 class="card__title">Услуги по функционированию сайтов</h3>
                         <p class="card__text"></p>
                     </div>
                 </div>
                 <div class="wrapper-btn">
                     <button class="btn width">Оставить заявку</button>
-                    <p class="wrapper-btn__text">В условиях постоянной конкуренции и быстро меняющихся рыночных условий внедрение CRM-системы становится не просто желательным, а необходимым шагом для успешного ведения бизнеса.</p>
+                    <p class="wrapper-btn__text">У нас имеются варианты для запуска вашего проекта в кратчайшие сроки и за разумные деньги. Разработка сайта на базе готового решения занимает всего 1-2 недели.</p>
                 </div>
             </section>
             <section class="bizness">
@@ -74,9 +74,8 @@
                         <p>остальные 80% усилий — лишь 20% результата</p>
                         <p>Закон Парето</p>
                     </div>
-                    <h2 class="wr-biz__title">Преобразите свой бизнес<br><span>CRM-системы для максимальной эффективности</span></h2>
-                    <p class="wr-biz__bid">Оставьте заявку прямо сейчас, чтобы получить профессиональную помощь в выборе и настройке решения, которое идеально подойдет именно для вашего бизнеса. Наша команда готова уделять максимальное внимание вашим потребностям, предлагать
-                        наиболее оптимальные решения.</p>
+                    <h2 class="wr-biz__title">Преобразите свой сайт<br><span>CRM-системы для максимальной эффективности</span></h2>
+                    <p class="wr-biz__bid">Автоматизация ваших бизнес-процессов - это наш конек. Разрабатываем:</p>
                     <div class="wr-biz__picture">
                         <img src="img/target.png">
                     </div>
@@ -84,85 +83,85 @@
                         <div class="list__item"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="-1" y="13.1422" width="20" height="20" rx="4" transform="rotate(-45 -1 13.1422)" fill="#454545"/>
                             </svg>
-                            <li>поможем централизовать информацию о клиентах</li>
+                            <li>промо-сайт</li>
                         </div>
                         <div class="list__item"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="-1" y="13.1422" width="20" height="20" rx="4" transform="rotate(-45 -1 13.1422)" fill="#454545"/>
                             </svg>
-                            <li>оптимизируем процессы</li>
+                            <li>сайт-визитка</li>
                         </div>
                         <div class="list__item"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="-1" y="13.1422" width="20" height="20" rx="4" transform="rotate(-45 -1 13.1422)" fill="#454545"/>
                             </svg>
-                            <li>повысить уровень обслуживания</li>
+                            <li>интернет-каталог</li>
                         </div>
                         <div class="list__item"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <rect x="-1" y="13.1422" width="20" height="20" rx="4" transform="rotate(-45 -1 13.1422)" fill="#454545"/>
                             </svg>
-                            <li>обеспечим быструю интеграцию и обучение сотрудников</li>
+                            <li>интернет-магазин</li>
                         </div>
                     </ul>
                     <p class="wr-biz__text">Не упустите шанс улучшить свои бизнес-процессы и увеличить прибыль — <span>свяжитесь с нами</span> уже сегодня!</p>
                 </div>
             </section>
             <section class="implementation">
-                <h2 class="up-title">Этапы внедрения и ведения CRM<br><span>для достижения максимальной выручки при минимальных усилиях</span></h2>
+                <h2 class="up-title">Почему мы?<br><span></span></h2>
                 <div class="grid-st">
                     <div class="number-st">
                         <div class="text-basic">
-                            <h3 class="text-basic__title">Аудит и составление ТЗ</h3>
-                            <p>срок
+                            <h3 class="text-basic__title">Заключение договора</h3>
+                            <!--<p>срок
                                 <span class="bold">1-2 недели</span></p>
                             <p>стоимость
-                                <span class="bold">по тарифу</span></p>
-                            <p>Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
+                                <span class="bold">по тарифу</span></p>-->
+                            <p>Заключение договора с подписанием технического задания дает клиенту уверенность в том, что результат будет таким, как он хочет.</p>
                         </div>
-                        <div class="text-foto">
+                        <!--<div class="text-foto">
                             <div></div>
                             <p>Результат</p>
-                        </div>
+                        </div>-->
                         <span class="big-num">1</span>
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
-                            <h3 class="text-basic__title">Внедрение CRM</h3>
-                            <p>срок
+                            <h3 class="text-basic__title">Опыт работы 11 плодотворных лет</h3>
+                            <!--<p>срок
                                 <span class=" bold">1-7 месяцев</span></p>
-                            <p>стоимость <span class="bold">от 2000 руб./час</span></p>
-                            <p>Проводём комплексный анализ бизнеса, клиентов, компании, отдела продаж. Определим задачи CRM и создадим план для достижения целей, учитывая особенности вашего бизнеса.</p>
+                            <p>стоимость <span class="bold">от 2000 руб./час</span></p>-->
+                            <p>На протяжении всего этого времени наша команда совершенствует свои навыки в области разработки и осваивает новые технологии.</p>
                         </div>
-                        <div class="text-foto">
+                        <!--<div class="text-foto">
                             <div></div>
                             <p>Результат</p>
-                        </div>
+                        </div>-->
                         <span class="big-num">2</span>
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
-                            <h3 class="text-basic__title">Индивидуальная разработка</h3>
-                            <p class="text-basic__par">срок
+                            <h3 class="text-basic__title">Соблюдение оговоренных сроков</h3>
+                            <!--<p class="text-basic__par">срок
                                 <span class="bold">от 1 недели</span></p>
                             <p class="text-basic__par">стоимость
-                                <span class="bold">от 2000 руб./час</span></p>
-                            <p class="text-basic__par">Если базового функционала недостаточно, мы разработаем уникальные модули, которые полностью соответствуют специфике вашего бизнеса</p>
+                                <span class="bold">от 2000 руб./час</span></p>-->
+                            <p class="text-basic__par">Мы стараемся быть пунктуальными: 95% наших проектов было запущено в срок или ранее оговоренного срока.</p>
                         </div>
-                        <div class="more-details">
+                        <!--<div class="more-details">
                             <button class="btn">Подробнее</button>
-                        </div>
+                        </div>-->
                         <span class="big-num">4</span>
                     </div>
                     <div class="number-st">
                         <div class="text-basic">
-                            <h3 class="text-basic__title">Сопровождение</h3>
-                            <p class="text-basic__par">срок
+                            <h3 class="text-basic__title">Более 350 довольных клиентов</h3>
+                            <!--<p class="text-basic__par">срок
                                 <span class="bold">ежемесячно</span></p>
                             <p class="text-basic__par">стоимость
-                                <span class="bold">от 2000 руб./час</span></p>
-                            <p class="text-basic__par">Получите в распоряжение команду экспертов для ежемесячного развития и гарантии работоспособности CRM-системы</p>
+                                <span class="bold">от 2000 руб./час</span></p>-->
+                            <p class="text-basic__par">За эти годы мы разработали огромное количество проектов с нуля и практически все наши клиенты остались довольны полученным результатом.</p>
                         </div>
-                        <div class="more-details">
+                        <!--<div class="more-details">
                             <button class="btn">Подробнее</button>
-                        </div>
+                        </div>-->
                         <span class="big-num">3</span>
                     </div>
                 </div>
@@ -170,9 +169,8 @@
             <section class="form-crm">
                 <div class="wr-form-crm container">
                     <div class="inf">
-                        <h2>Запишись на бесплатный урок
-                            по работе в CRM</h2>
-                        <p class="inf__pr">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
+                        <h2>Доверьте нам разработку Вашего проекта</h2>
+                        <p class="inf__pr">Наши сайты - работают: они соответствуют поставленным для них целям и задачам (продают, приносят прибыль и создают безупречный имидж).</p>
                         <div class="wr-form">
                             <form class="form-bt">
                                 <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
