--- a/sites.html
+++ b/sites.html
@@ -32,7 +32,7 @@
     </header>
     <main>
         <div class="container">
-            <secyion class="necessity">
+            <section class="necessity">
                 <h2 class="up-title"><span>Мы предлагаем</span><br>своим клиентам услуги</h2>
                 <!--<p class="necessity__text">В современном бизнесе эффективное управление клиентскими отношениями играет ключевую роль в успехе компании. Однако, с ростом объема данных и увеличением числа клиентов, многие организации сталкиваются с проблемами, которые делают внедрение
                     CRM-системы жизненно необходимым.</p>-->
