--- a/sites.html
+++ b/sites.html
@@ -13,16 +13,35 @@
 <body class="black">
     <header class="container">
         <div class="menu-header">
-            <a href="/">
-                <img src="img/logo-header.svg" alt="Лого" width="100px" height="32px">
-            </a>
+            <div class="logo-name">
+                <a href="/">
+                    <img src="img/logo-header.svg" alt="Лого" width="100px" height="32px">
+                </a>
+            </div>
             <nav class="nav-menu">
-                <a href="">О компании</a>
-                <a href="services.html">Услуги</a>
-                <a href="sites.html">Лицензии</a>
-                <a href="">Блог</a>
-                <a href="">Кейсы</a>
-                <a href="">Контакты</a>
+                <ul class="list-menu">
+                    <li><a href="">О компании</a></li>
+                    <li class="op-menu"><a href="services.html">Услуги
+                        <ul class="op-menu-list">
+                            <li>
+                                <a href="services.html">СRM</a>
+                            </li>
+                            <li>
+                                <a href="sites.html">Сайты</a>
+                            </li>
+                            <li>
+                                <a href="">Виджеты</a>
+                            </li>
+                            <li>
+                                <a href="">1C</a>
+                            </li>
+                        </ul>
+                    </a></li>
+                    <li><a href="">Лицензии</a></li>
+                    <li><a href="">Блог</a></li>
+                    <li><a href="">Кейсы</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
             </nav>
             <div class="button-tel">
                 <div class="button-tel__number"><a href="tel:+79200408114">+7 (920) 040-81-14</a></div>
@@ -167,10 +186,12 @@
                 </div>
             </section>
             <section class="form-crm">
+                <img src="img/vectortop.png" alt="">
                 <div class="wr-form-crm container">
                     <div class="inf">
-                        <h2>Доверьте нам разработку Вашего проекта</h2>
-                        <p class="inf__pr">Наши сайты - работают: они соответствуют поставленным для них целям и задачам (продают, приносят прибыль и создают безупречный имидж).</p>
+                        <h2>Запишись на бесплатный урок
+                            по работе в CRM</h2>
+                        <p class="wr-par">Ведущие специалисты в области внедрения и ведения CRM систем бесплатно проведут аудит и покажут "узкие" места вашей системы.</p>
                         <div class="wr-form">
                             <form class="form-bt">
                                 <input class="form-bt__line" type="tel" name="phone" placeholder="Ваш номер телефона">
@@ -179,9 +200,12 @@
                         </div>
                     </div>
                     <div class="foto">
-                        <img src="img/bg-form.png" alt="">
+                        <img src="img/mac.png" alt="">
+                        <img src="img/logo-1.png" alt="">
+                        <img src="img/zoom.png" alt="">
                     </div>
                 </div>
+                <img src="img/vectorbr.png" alt="">
             </section>
             <section class="cases">
                 <div class="container">
@@ -353,12 +377,10 @@
                         <div class="el-text">
                             <p class="details__text">Написать нам на почту</p>
                             <a href="mailto:info.intogroup@yandex.ru">info.intogroup@yandex.ru</a><br>
-                            <a href="mailto:into.bitrix24@yandex.ru">into.bitrix24@yandex.ru</a>
                         </div>
                         <div class="el-text">
                             <p class="details__text">Поговорить с нами по телефону</p>
                             <a href="tel:+79200408114">+7 (920) 040-81-14</a><br>
-                            <a href:="tel:+79625104914">+7 (962) 510-49-14</a>
                         </div>
                         <div class="el-text">
                             <p class="details__text">Поговорить с нашим аккаунт- менеджером
@@ -376,11 +398,9 @@
         <div class="bottom-ft">
             <div class="number-footer">
                 <a class="number" href="tel:+79200408114">+7 (920) 040-81-14</a><br>
-                <a class="number" href:="tel:+79625104914">+7 (962) 510-49-14</a><br><br>
                 <p class="ft-adress">Время работы: с 9:00 - до 18:00<br>
                     г.Нижний Новгород, ул.Ильинская 119, эт.3</p>
                 <a class="ft-adress" href="mailto:info.intogroup@yandex.ru">info.intogroup@yandex.ru</a><br>
-                <a class="ft-adress" href="mailto:into.bitrix24@yandex.ru">into.bitrix24@yandex.ru</a>
             </div>
             <div class="logo-footer">
                 <img src="img/logo-footer.png">
